Add support for name change

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -64,7 +64,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "node1.name = 'newName'"
+   ]
   }
  ],
  "metadata": {
