Add support for custom icons and icon colors

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -67,6 +67,23 @@
    "source": [
     "node1.name = 'newName'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1.icon = 'archive'\n",
+    "node1.icon_color = 'black'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
