Add selected/opened/disabled attributes

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -55,8 +55,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node3 = Node(name='node3')\n",
+    "node3 = Node(name='node3', disabled=True)\n",
     "node1.add_node(node3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node3.disabled = False"
    ]
   },
   {
@@ -83,7 +92,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "node1.opened = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node2.selected = False"
+   ]
   }
  ],
  "metadata": {
