Synchronize selected nodes

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -102,8 +102,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node2.selected = False"
+    "node2.selected = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
