Add show_icon attr for nodes

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -65,6 +65,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "node3.show_icon = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "node3.disabled = False"
    ]
   },
