Check that the node is part of the tree before deselecting

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -119,6 +119,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "tree2 = Tree(nodes=[node2, node1, Node(name=\"node4\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
