Add support for node removal

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -55,8 +55,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tree.nodes = [node2, node1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "node3 = Node(name='node3', disabled=True)\n",
-    "node1.add_node(node3)"
+    "node4 = Node(name='node4', disabled=True)\n",
+    "node1.add_node(node3)\n",
+    "node1.add_node(node4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1.remove_node(node4)"
    ]
   },
   {
