Add attributes for tree styling

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><h1>ipytree: Tree widget</h1></center>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,16 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = Tree()\n",
-    "tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tree = Tree(stripes=True)\n",
     "tree"
    ]
   },
@@ -65,9 +63,18 @@
    "outputs": [],
    "source": [
     "node3 = Node(name='node3', disabled=True)\n",
-    "node4 = Node(name='node4', disabled=True)\n",
-    "node1.add_node(node3)\n",
-    "node1.add_node(node4)"
+    "node4 = Node(name='node4')\n",
+    "node5 = Node(name='node5', nodes=[Node(name=\"1\"), Node(name=\"2\")])\n",
+    "node2.add_node(node3)\n",
+    "node2.add_node(node4)\n",
+    "node2.add_node(node5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subset of the tree:"
    ]
   },
   {
@@ -76,7 +83,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node1.remove_node(node4)"
+    "subset = Tree([node5], theme='default-dark', multiple_selection=False, dots=False)\n",
+    "subset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dynamic update of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node2.remove_node(node4)"
    ]
   },
   {
@@ -133,31 +157,6 @@
    "source": [
     "node2.selected = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree2 = Tree(nodes=[node2, node1, Node(name=\"node4\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
