Add support for adding nodes at a given position

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -71,6 +71,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree.add_node(Node(name='node6'), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node2.add_node(Node(name='node7'), 2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = Tree([node5], theme='default-dark', multiple_selection=False, dots=False)\n",
+    "subset = Tree([node5], theme='default-dark', multiple_selection=False)\n",
     "subset"
    ]
   },
@@ -146,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node1.opened = False"
+    "node5.opened = True"
    ]
   },
   {
@@ -157,6 +175,13 @@
    "source": [
     "node2.selected = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
