Clean Node constructor

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node1 = Node(name='node1')\n",
+    "node1 = Node('node1')\n",
     "tree.add_node(node1)\n",
     "tree"
    ]
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node2 = Node(name='node2')\n",
+    "node2 = Node('node2')\n",
     "tree.add_node(node2)"
    ]
   },
@@ -62,9 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node3 = Node(name='node3', disabled=True)\n",
-    "node4 = Node(name='node4')\n",
-    "node5 = Node(name='node5', nodes=[Node(name=\"1\"), Node(name=\"2\")])\n",
+    "node3 = Node('node3', disabled=True)\n",
+    "node4 = Node('node4')\n",
+    "node5 = Node('node5', [Node('1'), Node('2')])\n",
     "node2.add_node(node3)\n",
     "node2.add_node(node4)\n",
     "node2.add_node(node5)"
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree.add_node(Node(name='node6'), 1)"
+    "tree.add_node(Node('node6'), 1)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node2.add_node(Node(name='node7'), 2)"
+    "node2.add_node(Node('node7'), 2)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dynamic update of nodes"
+    "## Dynamic nodes update"
    ]
   },
   {
