Implement jupyter-like theme for jstree

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -32,9 +32,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node1 = Node('node1')\n",
-    "tree.add_node(node1)\n",
     "tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1 = Node('node1')\n",
+    "tree.add_node(node1)"
    ]
   },
   {
@@ -101,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = Tree([node5], theme='default-dark', multiple_selection=False)\n",
+    "subset = Tree([node5], multiple_selection=False)\n",
     "subset"
    ]
   },
@@ -155,7 +163,7 @@
    "outputs": [],
    "source": [
     "node1.icon = 'archive'\n",
-    "node1.icon_color = 'black'"
+    "node1.icon_style = 'warning'"
    ]
   },
   {
@@ -164,7 +172,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node5.opened = True"
+    "node2.open_icon = 'plus-square'\n",
+    "node2.open_icon_style = 'success'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node2.close_icon = 'minus-square'\n",
+    "node2.close_icon_style = 'danger'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node5.opened = False"
    ]
   },
   {
@@ -175,13 +203,6 @@
    "source": [
     "node2.selected = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
