Add animation example in the notebook

--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -203,6 +203,51 @@
    "source": [
     "node2.selected = True"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open / Close Animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node8 = Node('node8', [Node('9'), Node('10')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slow_animation = Tree([node8, node3], animation=2000)\n",
+    "slow_animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node11 = Node('node11', [Node('12'), Node('13')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_animation = Tree([node11, node3], animation=0)\n",
+    "no_animation"
+   ]
   }
  ],
  "metadata": {
