--- a/examples/ipytree.ipynb
+++ b/examples/ipytree.ipynb
@@ -100,6 +100,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Handle click"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_click(event):\n",
+    "    event['owner'].name = 'I am selected!!!' if event['new'] else 'I am not selected...' \n",
+    "\n",
+    "node4.observe(handle_click, 'selected')\n",
+    "node4.selected = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Subset of the tree:"
    ]
   },
@@ -266,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
